--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -1,25 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/labelHome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Home"
-        android:textAlignment="center"
-        android:textSize="24sp"
+        android:layout_marginLeft="15dp"
+        android:fontFamily="@font/helvetica"
+        android:textSize="30sp"
         android:textStyle="bold"
+        android:layout_marginTop="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:scrollbars="none"
         app:layout_constraintTop_toBottomOf="@id/labelHome">
@@ -33,8 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="당신을 위한 추천"
-        android:textAlignment="center"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         android:layout_marginTop="20dp"
         />
@@ -42,7 +45,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recommend_view_1"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:orientation="horizontal"
 />
         <TextView
@@ -50,16 +55,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="당신을 위한 추천"
-            android:textAlignment="center"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textStyle="bold"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recommend_view_2"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             />
         <TextView
@@ -67,10 +71,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="당신을 위한 추천"
-            android:textAlignment="center"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textStyle="bold"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -84,10 +87,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="최근 본 상품"
-            android:textAlignment="center"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textStyle="bold"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -101,4 +103,4 @@
 
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
